--- a/ckan/templates/package/new_view.html
+++ b/ckan/templates/package/new_view.html
@@ -22,7 +22,7 @@
     </p>
   {% endif %}
 
-  <form class="dataset-form dataset-resource-form form-horizontal" method="post" data-module="basic-form resource-form">
+  <form id="resource-view-edit" class="dataset-form dataset-resource-form form-horizontal" method="post" data-module="basic-form resource-form">
     {% include 'package/snippets/view_form.html' %}
     <div class="form-actions">
         <button class="btn {% if not h.resource_view_display_preview(data) %}hide{%endif%}" name="preview" value="True" type="submit">{{ _('Preview') }}</button>
